[package]
name = "libmat-rs"
version = "0.1.1"
edition = "2021"
description = "Rust bindings for libmat, an stb-style single-header linear algebra library in pure C"
license = "Apache-2.0"
repository = "https://github.com/alvgaona/libmat-rs"
homepage = "https://github.com/alvgaona/libmat-rs"
keywords = ["linear-algebra", "matrix", "math", "ffi"]
categories = ["mathematics", "science", "api-bindings"]
include = ["src/**/*", "vendor/libmat/mat.h", "build.rs", "LICENSE", "README.md"]

[build-dependencies]
cc = "1.0"
